bitfield/tests/11-bits-attribute-wrong.stderr
error[E0308]: mismatched types
  --> tests/11-bits-attribute-wrong.rs:11:14
   |
9  | #[bitfield]
   | ----------- in this procedural macro expansion
10 | pub struct RedirectionTableEntry {
11 |     #[bits = 9]
   |              ^ expected an array with a fixed size of 9 elements, found one with 1 element
   |
   = note: this error originates in the attribute macro `bitfield` (in Nightly builds, run with -Z macro-backtrace for more info)
